Lowered search box width in image picker so that it displays correctly when scrollbar is shown.

--- a/thecut/media/static/media/admin.css
+++ b/thecut/media/static/media/admin.css
@@ -395,6 +395,7 @@ body.ajax-loading {
   .media-attachedmediaitems .media-picker .media-filter_objects form .search {
     position: relative;
     height: 23px;
+    width: 172px;
     background: #898989; /* for non-css3 browsers */
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#898989', endColorstr='#666666'); /* for IE */
     background: -webkit-gradient(linear, left top, left bottom, from(#898989), to(#666666)); /* for webkit browsers */
@@ -407,7 +408,7 @@ body.ajax-loading {
     left: 0;
     padding: 0;
     margin: 0;
-    width: 155px;
+    width: 138px;
     height: 21px;
     border: 1px solid #a3a4a7;
     line-height: 21px;
@@ -417,7 +418,7 @@ body.ajax-loading {
     position: absolute;
     overflow: hidden;
     top: 0;
-    right: 0;
+    left: 140px;
     width: 32px;
     height: 23px;
     border-style: none;
